optimize get follower, following, friend list with redis, kafka