@@ -4,12 +4,14 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.cloud.Timestamp;
 import com.google.cloud.firestore.*;
 import com.social_media_friend.dto.request.UpdateFollowCountsRequest;
+import com.social_media_friend.dto.response.UserFollowResponse;
 import com.social_media_friend.dto.response.UserResponse;
 import com.social_media_friend.entity.UserRelationship;
 import com.social_media_friend.service.UserService;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.http.*;
@@ -20,6 +22,7 @@ import org.springframework.web.client.RestTemplate;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
@@ -31,8 +34,8 @@ public class UserServiceImpl implements UserService {
     Firestore firestore;
     RestTemplate restTemplate;
     RedisTemplate<String, Object> redisTemplate;
-    StringRedisTemplate stringRedisTemplate;
-    ObjectMapper objectMapper;
+//    StringRedisTemplate stringRedisTemplate;
+//    ObjectMapper objectMapper;
     static String AUTH_SERVICE_URL = "http://localhost:8080/api/auth/users/";
 
     @Override
@@ -53,13 +56,13 @@ public class UserServiceImpl implements UserService {
            /* Invalidate cache
             xóa đi danh sách khi có người follow mới
             */
-            redisTemplate.delete("user:followers:" + followedId + ":*");
-            redisTemplate.delete("user:following:" + followerId + ":*");
-            redisTemplate.delete("user:friends:" + followerId + ":*");
-            redisTemplate.delete("user:friends:" + followedId + ":*");
+            deleteKeysByPattern("user:followers:" + followedId + ":*");
+            deleteKeysByPattern("user:following:" + followerId + ":*");
+            deleteKeysByPattern("user:friends:" + followerId + ":*");
+            deleteKeysByPattern("user:friends:" + followedId + ":*");
 
-            stringRedisTemplate.convertAndSend("follow-events",
-                    "\"followerId\":\"" + followerId + "\",\"followedId\":\"" + followedId + "\"}");
+//            stringRedisTemplate.convertAndSend("follow-events",
+//                    "\"followerId\":\"" + followerId + "\",\"followedId\":\"" + followedId + "\"}");
         } catch (RestClientException e) {
             throw new RuntimeException("Failed to communicate with auth service", e);
         }
@@ -75,14 +78,22 @@ public class UserServiceImpl implements UserService {
             /* Invalidate cache
             xóa đi danh sách khi có người follow mới
             */
-            redisTemplate.delete("user:followers:" + followedId + ":*");
-            redisTemplate.delete("user:following:" + followerId + ":*");
-            redisTemplate.delete("user:friends:" + followerId + ":*");
-            redisTemplate.delete("user:friends:" + followedId + ":*");
+            deleteKeysByPattern("user:followers:" + followedId + ":*");
+            deleteKeysByPattern("user:following:" + followerId + ":*");
+            deleteKeysByPattern("user:friends:" + followerId + ":*");
+            deleteKeysByPattern("user:friends:" + followedId + ":*");
         } catch (RestClientException e) {
             throw new RuntimeException("Failed to communicate with auth service", e);
         }
     }
+
+    public void deleteKeysByPattern(String pattern) {
+        Set<String> keys = redisTemplate.keys(pattern);
+        if (keys != null && !keys.isEmpty()) {
+            redisTemplate.delete(keys);
+        }
+    }
+
 
     private void updateAuthServiceUser(String followerId, String followedId, String operation) {
 
@@ -113,52 +124,65 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public List<String> getFollowers(String followedId, int page, int size) throws ExecutionException, InterruptedException {
+    public List<UserFollowResponse> getFollowers(String followedId, int page, int size) throws ExecutionException, InterruptedException {
         String cacheKey = "user:followers:" + followedId + ":" + page;
-        List<String> cachedFollowers = (List<String>) redisTemplate.opsForValue().get(cacheKey);
-        if (cachedFollowers != null)
+        List<UserFollowResponse> cachedFollowers = (List<UserFollowResponse>) redisTemplate.opsForValue().get(cacheKey);
+        if (cachedFollowers != null) {
             return cachedFollowers;
+        }
+
         Query query = firestore.collection("relationships")
                 .whereEqualTo("followedId", followedId)
                 .orderBy("followAt", Query.Direction.DESCENDING)
                 .limit(size)
                 .offset((page - 1) * size);
         List<QueryDocumentSnapshot> documents = query.get().get().getDocuments();
-        List<String> followerIds = new ArrayList<>();
-        for (QueryDocumentSnapshot doc : documents) {
-            followerIds.add(doc.getString("followerId"));
+        List<String> followerIds = documents.stream()
+                .map(doc -> doc.getString("followerId"))
+                .collect(Collectors.toList());
+
+        if (followerIds.isEmpty()) {
+            return List.of();
         }
 
-        redisTemplate.opsForValue().set(cacheKey, followerIds, 15, TimeUnit.MINUTES);
+        List<UserFollowResponse> followers = callAuthService(followerIds);
+        redisTemplate.opsForValue().set(cacheKey, followers, 15, TimeUnit.MINUTES);
 //        15 là thời gian sống của dữ liệu. Sau 15p sẽ tự động xóa
-        return followerIds;
+        return followers;
     }
 
     @Override
-    public List<String> getFollowing(String followerId, int page, int size) throws ExecutionException, InterruptedException {
+    public List<UserFollowResponse> getFollowing(String followerId, int page, int size) throws ExecutionException, InterruptedException {
         String cacheKey = "user:following:" + followerId + ":" + page;
-        List<String> cachedFollowing = (List<String>) redisTemplate.opsForValue().get(cacheKey);
-        if (cachedFollowing != null)
+        List<UserFollowResponse> cachedFollowing = (List<UserFollowResponse>) redisTemplate.opsForValue().get(cacheKey);
+        if (cachedFollowing != null) {
             return cachedFollowing;
+        }
+
         Query query = firestore.collection("relationships")
                 .whereEqualTo("followerId", followerId)
                 .orderBy("followAt", Query.Direction.DESCENDING)
                 .limit(size)
                 .offset((page - 1) * size);
         List<QueryDocumentSnapshot> documents = query.get().get().getDocuments();
-        List<String> followedIds = new ArrayList<>();
-        for (QueryDocumentSnapshot doc : documents) {
-            followedIds.add(doc.getString("followedId"));
+        List<String> followedIds = documents.stream()
+                .map(doc -> doc.getString("followedId"))
+                .collect(Collectors.toList());
+
+        if (followedIds.isEmpty()) {
+            return List.of();
         }
 
-        redisTemplate.opsForValue().set(cacheKey, followedIds, 15, TimeUnit.MINUTES);
-        return followedIds;
+        List<UserFollowResponse> following = callAuthService(followedIds);
+        redisTemplate.opsForValue().set(cacheKey, following, 15, TimeUnit.MINUTES);
+        return following;
     }
 
     @Override
-    public List<String> getFriends(String uid, int page, int size) throws ExecutionException, InterruptedException {
+    public List<UserFollowResponse> getFriends(String uid, int page, int size) throws ExecutionException, InterruptedException {
+//        System.out.println("page: " + page + " size: " + size);
         String cacheKey = "user:friends:" + uid + ":" + page;
-        List<String> cachedFriends = (List<String>) redisTemplate.opsForValue().get(cacheKey);
+        List<UserFollowResponse> cachedFriends = (List<UserFollowResponse>) redisTemplate.opsForValue().get(cacheKey);
         if (cachedFriends != null)
             return cachedFriends;
 
@@ -170,7 +194,7 @@ public class UserServiceImpl implements UserService {
                 .collect(Collectors.toList());
 
         if (followedIds.isEmpty())
-            return Collections.emptyList();
+            return List.of();
 
         Query friendQuery = firestore.collection("relationships")
                 .whereIn("followerId", followedIds)
@@ -183,8 +207,24 @@ public class UserServiceImpl implements UserService {
                 .map(doc -> doc.getString("followerId"))
                 .collect(Collectors.toList());
 
-        redisTemplate.opsForValue().set(cacheKey, friendIds, 15, TimeUnit.MINUTES);
-        return friendIds;
+        if (friendIds.isEmpty()) {
+            return List.of();
+        }
+
+        List<UserFollowResponse> friends = callAuthService(friendIds);
+        redisTemplate.opsForValue().set(cacheKey, friends, 15, TimeUnit.MINUTES);
+        return friends;
+    }
+
+    private List<UserFollowResponse> callAuthService(List<String> ids) {
+        HttpEntity<List<String>> request = new HttpEntity<>(ids);
+        ResponseEntity<List<UserFollowResponse>> response = restTemplate.exchange(
+                AUTH_SERVICE_URL + "user-list",
+                HttpMethod.POST,
+                request,
+                new ParameterizedTypeReference<List<UserFollowResponse>>() {}
+        );
+        return response.getBody() != null ? response.getBody() : List.of();
     }
 
     @Override
